--- a/컴그 실습/컴그 실습.vcxproj.filters
+++ b/컴그 실습/컴그 실습.vcxproj.filters
@@ -88,5 +88,8 @@
     <ClInclude Include="stb_image.h">
       <Filter>소스 파일\헤더파일</Filter>
     </ClInclude>
+    <ClInclude Include="Common.h">
+      <Filter>소스 파일\헤더파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
